completed implementing swagger
