# app/controllers/requestHandler.go
@@ -17,6 +17,7 @@ type messageErr struct {
 
 func employeeCRUD(w http.ResponseWriter, r *http.Request) {
 	switch r.Method {
+
 	case "GET":
 		id, err := strconv.ParseInt(r.URL.Query().Get("EmpId"), 10, 64)
 		if err != nil {
@@ -102,6 +103,12 @@ func employeeCRUD(w http.ResponseWriter, r *http.Request) {
 }
 
 // RequestHandler Exported
+// GetUser godoc
+// @Summary Retrieves user based on given ID
+// @Produce json
+// @Param id path integer true "Empl ID"
+// @Success 200 {object} models.Employee
+// @Router /employee/{id} [get]
 func RequestHandler() {
 	http.HandleFunc("/employee", employeeCRUD)
 	fmt.Println("Running")
